--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <img src="images/jpg-848-removebg.png" alt="Jarosław Janas">
         <video src="images/Ink%20-%2035506.mp4" autoplay muted loop playsinline nocontrols></video>
-        <button class="tutaj">zobacz moje portfolio</button>
+        <button class="tutaj">zobacz moje <span class="neon">p</span>ortfolio</button>
     </header>
     <section class="features clearfix">
 
