--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         href="https://dzarek.github.io/memoryGame/">PLAY <i class="far fa-play-circle"></i></a></p>
             </div>
         </div>
-        <div class="project clearfix">
+        <div class="project clearfix ">
             <div class="web pp">
                 <img src="images/4a.jpg" alt="projekt 4">
             </div>
@@ -126,6 +126,18 @@
                 <h2>GRA - BLACKJACK</h2>
                 <p>Przenieś się do wirtualnego kasyna i zagraj w przyjemną grę BlackJack. <br> <br><a
                         href="https://dzarek.github.io/blackjackGame/">PLAY <i class="far fa-play-circle"></i></a></p>
+                </p>
+            </div>
+        </div>
+        <div class="project clearfix more less">
+            <div class="web six">
+                <img src="images/6a.png" alt="projekt 6">
+            </div>
+            <div class="about six">
+                <h2>GRA - RANCZO QUIZ</h2>
+                <p>Coś dla fanów serialu Ranczo! Pokaż jak wielkim fanem jesteś Wilkowyj i zdobądź jak najwięcej
+                    punktów. <br> <br><a href="https://dzarek.github.io/quizGame/">PLAY <i
+                            class="far fa-play-circle"></i></a></p>
                 </p>
             </div>
         </div>
