--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
         </div>
         <div class="project clearfix more less">
             <div class="web six">
-                <img src="images/6a.png" alt="projekt 6">
+                <img src="images/6a.jpg" alt="projekt 6">
             </div>
             <div class="about six">
-                <h2>GRA - RANCZO QUIZ</h2>
-                <p>Coś dla fanów serialu Ranczo! Pokaż jak wielkim fanem jesteś Wilkowyj i zdobądź jak najwięcej
-                    punktów. <br> <br><a href="https://dzarek.github.io/quizGame/">PLAY <i
+                <h2>SERIALOWE QUIZOWANIE</h2>
+                <p>Coś dla fanów oglądania seriali! Pochwal się swoją wiedzą z różnych serialowych hitów i zdobądź jak
+                    najwięcej
+                    punktów. <br> <br><a href="https://dzarek.github.io/serialoweQuizowanie/">PLAY <i
                             class="far fa-play-circle"></i></a></p>
                 </p>
             </div>
