--- a/index.html
+++ b/index.html
@@ -142,6 +142,17 @@
                 </p>
             </div>
         </div>
+        <div class="project clearfix more less">
+            <div class="web seven">
+                <img src="images/7a.png" alt="projekt 7">
+            </div>
+            <div class="about seven">
+                <h2>APLIKACJA POGODOWA</h2>
+                <p>Tutaj możesz sprawdzić pogodę prawie dla każdego miasta na świecie. <br> <br><a
+                        href="https://dzarek.github.io/pogoda/">PLAY <i class="far fa-play-circle"></i></a></p>
+                </p>
+            </div>
+        </div>
     </section>
     <section class="slogan">
         <video src="images/Sea - 16108.mp4" autoplay muted loop playsinline nocontrols></video>
