--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
     <section class="contact">
         <h1>Skontaktuj się ze mną</h1>
         <div class="wrap clearfix">
-            <form method="post" name="contactform" action="mail.php">
+            <form method="post" name="contactform" action="contactform.php">
                 <input type="text" name="name" placeholder="Twoje imię" required>
                 <input type="email" name="email" placeholder="E-mail" required>
                 <textarea placeholder="Twoja wiadomość" name="message" required></textarea>
-<!--                 <button>Wyśli wiadomość</button> -->
+                <!-- <button>Wyśli wiadomość</button> -->
                 <input type="submit" name="submit" value="Wyśli" class="submit">
             </form>
             <div class="socials">
