--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jarosław Janas</title>
+    <title>Portfolio - Jarosław Janas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -124,12 +124,12 @@
         <img class="runningFour" src="images/run2.gif" alt="run">
         <div class="project clearfix more less">
             <div class="web five">
-                <img src="images/5a.jpg" alt="projekt 5">
+                <img src="images/8a.png" alt="projekt 5">
             </div>
             <div class="about five">
-                <h2>GRA - BLACKJACK</h2>
-                <p>Przenieś się do wirtualnego kasyna i zagraj w przyjemną grę BlackJack. <br> <br><a
-                        href="https://dzarek.github.io/blackjackGame/">PLAY <i class="far fa-play-circle"></i></a></p>
+                <h2>APLIKACJA LISTA ZADAŃ</h2>
+                <p>Łatwo zapominasz o swoich obowiązkach? Zaplanuj swój czas z aplikacją Lista Zadań! <br> <br><a
+                        href="https://dzarek.github.io/taskList/">PLAY <i class="far fa-play-circle"></i></a></p>
                 </p>
             </div>
         </div>
@@ -189,7 +189,7 @@
                 <input type="email" name="email" placeholder="E-mail" required>
                 <textarea placeholder="Twoja wiadomość" name="message" required></textarea>
                 <!-- <button>Wyśli wiadomość</button> -->
-                <input type="submit" name="submit" value="Wyśli wiadomość" class="submit">
+                <input type="submit" name="submit" value="Wyśli" class="submit">
             </form>
             <div class="socials">
                 <div class="social clearfix"><img src="images/contact1.png"
