--- a/index.html
+++ b/index.html
@@ -186,18 +186,11 @@
         <h1>Skontaktuj się ze mną</h1>
         <div class="wrap clearfix">
                   <form action="https://formspree.io/f/xknpapdr" method="POST">
-                <label>
-                    Your email:
-                    <input type="text" name="_replyto">
-                </label>
-                <label>
-                    Your message:
-                    <textarea name="message"></textarea>
-                </label>
-
-                <!-- your other form fields go here -->
-
-                <button type="submit">Send</button>
+             <input type="text" name="name" placeholder="Twoje imię" required>
+                <input type="email" name="email" placeholder="E-mail" required>
+                <textarea placeholder="Twoja wiadomość" name="message" required></textarea>
+                <!-- <button>Wyśli wiadomość</button> -->
+                <input type="submit" name="submit" value="Wyśli" class="submit">
             </form>
             <div class="socials">
                 <div class="social clearfix"><img src="images/contact1.png"
