--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
              <input type="text" name="name" placeholder="Twoje imię" required>
                 <input type="email" name="email" placeholder="E-mail" required>
                 <textarea placeholder="Twoja wiadomość" name="message" required></textarea>
-                <!-- <button>Wyśli wiadomość</button> -->
-                <input type="submit" name="submit" value="Wyśli" class="submit">
+                <button>Wyśli wiadomość</button>
+<!--                 <input type="submit" name="submit" value="Wyśli" class="submit"> -->
             </form>
             <div class="socials">
                 <div class="social clearfix"><img src="images/contact1.png"
