--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   <form action="https://formspree.io/f/xknpapdr" method="POST">
              <input type="text" name="name" placeholder="Twoje imię" required>
                 <input type="email" name="email" placeholder="E-mail" required>
-                <textarea placeholder="Twoja wiadomość" name="message" required></textarea>
+                <textarea placeholder="Twoja wiadomość..." name="message" required></textarea>
                 <button>Wyśli wiadomość</button>
 <!--                 <input type="submit" name="submit" value="Wyśli" class="submit"> -->
             </form>
