--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="images/circle-cropped(2).png" type="image/png">
     <title>Projekty - Jarosław Janas</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -15,6 +14,13 @@
 
 <body>
     <h1>Moje projekty</h1>
+    <div class="ring">
+        <button class="gry">GRY</button>
+        <button class="aplikacje">APLIKACJE</button>
+        <button class="stronyWWW">STRONY</button>
+        <!-- <button class="stronyWWW2">STRONY WWW</button> -->
+
+    </div>
     <div class="video">
     </div>
     <div class="text">
@@ -23,7 +29,7 @@
     <div class="textMediaQuery">
         <p>WYBIERZ PROJEKT</p>
     </div>
-    <div class="wrap">
+    <div class="wrap games none">
         <div class="wrapLeft">
             <a class="wisielec" href="#">
                 <p>Gra <br> Wisielec</p>
@@ -34,8 +40,8 @@
             <a class="memory" href="#">
                 <p>Gra <br> Memory</p>
             </a>
-            <a class="listaZadan" href="#">
-                <p>Aplikacja <br> Lista Zadań</p>
+            <a class="ninjaVsZombie" href="#">
+                <p>Gra <br> Ninja vs Zombie</p>
             </a>
         </div>
         <div class="wrapRight">
@@ -48,9 +54,67 @@
             <a class="serialoweQuizowanie" href="#">
                 <p>Serialowe <br> Quizowanie</p>
             </a>
+
+        </div>
+    </div>
+    <div class="wrap app none">
+        <div class="wrapLeft">
+            <!-- <a class="wisielec" href="#">
+                <p>Gra <br> Wisielec</p>
+            </a> -->
+            <a class="buyList" href="#">
+                <p>Aplikacja<br> Lista Zakupów</p>
+            </a>
+            <!-- <a class="memory" href="#">
+                <p>Gra <br> Memory</p>
+            </a> -->
+            <a class="listaZadan" href="#">
+                <p>Aplikacja <br> Lista Zadań</p>
+            </a>
+        </div>
+        <div class="wrapRight">
+            <a class="cocktails-chill" href="#">
+                <p>Aplikacja<br> Cocktails-Chill</p>
+            </a>
+            <!-- <a class="blackJack" href="#">
+                <p>Gra <br> Black-Jack</p>
+            </a> -->
             <a class="aplikacjaPogodowa" href="#">
                 <p>Aplikacja <br> Pogodowa</p>
             </a>
+            <!-- <a class="serialoweQuizowanie" href="#">
+                <p>Serialowe <br> Quizowanie</p>
+            </a> -->
+        </div>
+    </div>
+    <div class="wrap WWW none">
+        <div class="wrapLeft">
+            <a class="dorotaSzydełkuje" href="#">
+                <p>Dorota <br> Szydełkuje</p>
+            </a>
+            <!-- <a class="pingPong" href="#">
+                <p>Gra <br> Ping-Pong</p>
+            </a>
+            <a class="memory" href="#">
+                <p>Gra <br> Memory</p>
+            </a>
+            <a class="listaZadan" href="#">
+                <p>Aplikacja <br> Lista Zadań</p>
+            </a> -->
+        </div>
+        <div class="wrapRight">
+            <a class="jjApartments" href="#">
+                <p>JJ Apartments</p>
+            </a>
+            <!-- <a class="blackJack" href="#">
+                <p>Gra <br> Black-Jack</p>
+            </a>
+            <a class="serialoweQuizowanie" href="#">
+                <p>Serialowe <br> Quizowanie</p>
+            </a>
+            <a class="aplikacjaPogodowa" href="#">
+                <p>Aplikacja <br> Pogodowa</p>
+            </a> -->
         </div>
     </div>
 
